2006-12-20  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-stopped): After attaching to a process
	make gud-go send "continue".

2006-12-19  Juanma Barranquero  <lekktu@gmail.com>

	* image.el (image-type-header-regexps): Be more specific detecting `pbm'
	and `png' files.  Use non-capturing parenthesis for `tiff' regexp.

2006-12-19  Kim F. Storm  <storm@cua.dk>

	* bindings.el: Bind sigusr1 and sigusr2 in special-event-map
	instead of global-map.

	* files.el (magic-mode-alist): Allow matching file type by
	calling a function at bob.  Check for image types by calling
	image-type-from-buffer.  Suggested by Juanma Barranquero.
	(set-auto-mode): Do it.

2006-12-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): Introduce new method `scpc'.
	Remove "ControlMaster" option from the other `scp*' methods.
	(tramp-default-method): Check for ssh-agent before setting to
	`scp'.

2006-12-18  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-mode): Show context after isearch.
	(org-show-siblings): New function.
	(org-show-context): Use `org-show-siblings'.

2006-12-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/syntax.el (syntax-ppss-flush-cache, syntax-ppss):
	Use syntax-ppss-toplevel-pos.

2006-12-18  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-current-line): Make sure that lines are
	counted from beginning of buffer.
	(org-table-copy-region, org-table-paste-rectangle): Make sure that
	lines are counted from beginning of buffer.

2006-12-17  Chong Yidong  <cyd@stupidchicken.com>

	* info.el (Info-build-node-completions): Signal error if tag-table
	marker is not found.

	* pgg-gpg.el (pgg-gpg-use-agent): Default to t.

2006-12-17  Alan Mackenzie  <acm@muc.de>

	* emacs-lisp/lisp.el (beginning-of-defun-raw): Optimise (for
	speed) the case when open-paren-in-column-0-is-defun-start is nil.
	Based on code by Martin Rudalics.
